--- a/2.ML_model/1.train_model.ipynb
+++ b/2.ML_model/1.train_model.ipynb
@@ -560,8 +560,8 @@
    ],
    "source": [
     "# hypertune parameters with GridSearchCV\n",
-    "#parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
-    "parameters = {\"C\": [1.0], \"l1_ratio\": [0.8]}\n",
+    "parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
+    "#parameters = {\"C\": [1.0], \"l1_ratio\": [0.8]}\n",
     "print(f\"Parameters being tested: {parameters}\")\n",
     "grid_search_cv = GridSearchCV(\n",
     "    log_reg_model, parameters, cv=straified_k_folds, n_jobs=-1, scoring=\"f1_weighted\",\n",
@@ -710,8 +710,8 @@
    ],
    "source": [
     "# hypertune parameters with GridSearchCV\n",
-    "#parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
-    "parameters = {\"C\": [1.0], \"l1_ratio\": [0.8]}\n",
+    "parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
+    "#parameters = {\"C\": [1.0], \"l1_ratio\": [0.8]}\n",
     "print(f\"Parameters being tested: {parameters}\")\n",
     "grid_search_cv = GridSearchCV(\n",
     "    log_reg_model, parameters, cv=straified_k_folds, n_jobs=-1, scoring=\"f1_weighted\",\n",
