--- a/2.ML_model/1.train_model.ipynb
+++ b/2.ML_model/1.train_model.ipynb
@@ -526,7 +526,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parameters being tested: {'C': [1.0], 'l1_ratio': [0.8]}\n"
+      "Parameters being tested: {'C': [1.0], 'l1_ratio': [1]}\n"
      ]
     },
     {
@@ -560,8 +560,8 @@
    ],
    "source": [
     "# hypertune parameters with GridSearchCV\n",
-    "parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
-    "#parameters = {\"C\": [1.0], \"l1_ratio\": [0.8]}\n",
+    "#parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
+    "parameters = {\"C\": [1.0], \"l1_ratio\": [1]}\n",
     "print(f\"Parameters being tested: {parameters}\")\n",
     "grid_search_cv = GridSearchCV(\n",
     "    log_reg_model, parameters, cv=straified_k_folds, n_jobs=-1, scoring=\"f1_weighted\",\n",
@@ -578,8 +578,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters: {'C': 1.0, 'l1_ratio': 0.8}\n",
-      "Score of best estimator: 0.7957339853925729\n"
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1}\n",
+      "Score of best estimator: 0.7937529064873525\n"
      ]
     }
    ],
@@ -710,8 +710,8 @@
    ],
    "source": [
     "# hypertune parameters with GridSearchCV\n",
-    "parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
-    "#parameters = {\"C\": [1.0], \"l1_ratio\": [0.8]}\n",
+    "#parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
+    "parameters = {\"C\": [1.0], \"l1_ratio\": [0.8]}\n",
     "print(f\"Parameters being tested: {parameters}\")\n",
     "grid_search_cv = GridSearchCV(\n",
     "    log_reg_model, parameters, cv=straified_k_folds, n_jobs=-1, scoring=\"f1_weighted\",\n",
@@ -729,7 +729,7 @@
      "output_type": "stream",
      "text": [
       "Best parameters: {'C': 1.0, 'l1_ratio': 0.8}\n",
-      "Score of best estimator: 0.18757496511721997\n"
+      "Score of best estimator: 0.19171909356627806\n"
      ]
     }
    ],
