intelligent holdout data

--- a/2.ML_model/0.split_data.ipynb
+++ b/2.ML_model/0.split_data.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "from sklearn.utils import shuffle\n",
     "\n",
-    "from utils.MlPipelineUtils import get_features_data, get_random_images_indexes"
+    "from utils.MlPipelineUtils import get_features_data, get_random_images_indexes, get_representative_images, get_image_indexes"
    ]
   },
   {
@@ -66,13 +66,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4027, 1292)\n"
+      "(3981, 1292)\n"
      ]
     }
    ],
    "source": [
     "# remove holdout indexes\n",
-    "holdout_image_indexes = get_random_images_indexes(training_data, num_holdout_images)\n",
+    "images = get_representative_images(training_data, num_holdout_images, 10000)\n",
+    "holdout_image_indexes = get_image_indexes(training_data, images)\n",
     "training_data = training_data.drop(pd.Index(data=holdout_image_indexes))\n",
     "print(training_data.shape)"
    ]
@@ -86,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3423, 1292)\n"
+      "(3384, 1292)\n"
      ]
     }
    ],
@@ -135,27 +136,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>674</td>\n",
+       "      <td>2439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>679</td>\n",
+       "      <td>2440</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>680</td>\n",
+       "      <td>2441</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>681</td>\n",
+       "      <td>2442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>682</td>\n",
+       "      <td>2443</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -165,17 +166,17 @@
        "    <tr>\n",
        "      <th>4118</th>\n",
        "      <td>train</td>\n",
-       "      <td>4303</td>\n",
+       "      <td>4302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4119</th>\n",
        "      <td>train</td>\n",
-       "      <td>4304</td>\n",
+       "      <td>4303</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4120</th>\n",
        "      <td>train</td>\n",
-       "      <td>4305</td>\n",
+       "      <td>4304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4121</th>\n",
@@ -194,15 +195,15 @@
       ],
       "text/plain": [
        "        label  index\n",
-       "0     holdout    674\n",
-       "1     holdout    679\n",
-       "2     holdout    680\n",
-       "3     holdout    681\n",
-       "4     holdout    682\n",
+       "0     holdout   2439\n",
+       "1     holdout   2440\n",
+       "2     holdout   2441\n",
+       "3     holdout   2442\n",
+       "4     holdout   2443\n",
        "...       ...    ...\n",
-       "4118    train   4303\n",
-       "4119    train   4304\n",
-       "4120    train   4305\n",
+       "4118    train   4302\n",
+       "4119    train   4303\n",
+       "4120    train   4304\n",
        "4121    train   4306\n",
        "4122    train   4307\n",
        "\n",
