stratified test split

--- a/2.ML_model/0.split_data.ipynb
+++ b/2.ML_model/0.split_data.ipynb
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3981, 1292)\n"
+      "(4022, 1292)\n"
      ]
     }
    ],
@@ -87,17 +87,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3384, 1292)\n"
+      "(3417, 1292)\n"
      ]
     }
    ],
    "source": [
     "# remove test indexes\n",
-    "num_test_indexes = int(len(training_data.index) * test_ratio)\n",
-    "test_indexes = np.random.choice(\n",
-    "    training_data.index, size=num_test_indexes, replace=False\n",
+    "# test_data is pandas dataframe with test split, stratified by Mitocheck_Phenotypic_Class\n",
+    "test_data = training_data.groupby(\"Mitocheck_Phenotypic_Class\", group_keys=False).apply(\n",
+    "    lambda x: x.sample(frac=test_ratio)\n",
     ")\n",
+    "test_indexes = test_data.index\n",
     "training_data = training_data.drop(pd.Index(data=test_indexes))\n",
+    "\n",
     "train_indexes = np.array(training_data.index)\n",
     "print(training_data.shape)"
    ]
@@ -136,27 +138,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>2439</td>\n",
+       "      <td>544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>2440</td>\n",
+       "      <td>545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>2441</td>\n",
+       "      <td>546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>2442</td>\n",
+       "      <td>547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>2443</td>\n",
+       "      <td>548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -195,11 +197,11 @@
       ],
       "text/plain": [
        "        label  index\n",
-       "0     holdout   2439\n",
-       "1     holdout   2440\n",
-       "2     holdout   2441\n",
-       "3     holdout   2442\n",
-       "4     holdout   2443\n",
+       "0     holdout    544\n",
+       "1     holdout    545\n",
+       "2     holdout    546\n",
+       "3     holdout    547\n",
+       "4     holdout    548\n",
        "...       ...    ...\n",
        "4118    train   4302\n",
        "4119    train   4303\n",
