--- a/2.ML_model/1.train_model.ipynb
+++ b/2.ML_model/1.train_model.ipynb
@@ -351,7 +351,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3384 rows × 1292 columns</p>\n",
+       "<p>3417 rows × 1292 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -446,7 +446,7 @@
        "4306           1.849867          -0.896322  \n",
        "4307           1.555225          -0.743614  \n",
        "\n",
-       "[3384 rows x 1292 columns]"
+       "[3417 rows x 1292 columns]"
       ]
      },
      "execution_count": 2,
@@ -475,8 +475,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3384, 1280)\n",
-      "(3384,)\n"
+      "(3417, 1280)\n",
+      "(3417,)\n"
      ]
     }
    ],
@@ -1951,26 +1951,6 @@
       "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n",
       "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1995,8 +1975,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters: {'C': 0.1, 'l1_ratio': 0.0}\n",
-      "Score of best estimator: 0.8028856666640898\n"
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.6000000000000001}\n",
+      "Score of best estimator: 0.7977295975762645\n"
      ]
     }
    ],
@@ -2053,8 +2033,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3384, 1280)\n",
-      "(3384,)\n"
+      "(3417, 1280)\n",
+      "(3417,)\n"
      ]
     }
    ],
@@ -3281,12 +3261,6 @@
       "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n",
       "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n"
      ]
     }
@@ -3312,7 +3286,7 @@
      "output_type": "stream",
      "text": [
       "Best parameters: {'C': 0.01, 'l1_ratio': 0.1}\n",
-      "Score of best estimator: 0.19908505910209431\n"
+      "Score of best estimator: 0.19819771935157435\n"
      ]
     }
    ],
