--- a/2.ML_model/notebooks/2.evaluate_model.ipynb
+++ b/2.ML_model/notebooks/2.evaluate_model.ipynb
@@ -13,14 +13,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pathlib\n",
     "\n",
     "from joblib import load\n",
     "\n",
-    "from utils.MlPipelineUtils import (\n",
+    "import sys\n",
+    "# adding utils to system path\n",
+    "sys.path.insert(0, '../utils')\n",
+    "from MlPipelineUtils import (\n",
     "    get_features_data,\n",
     "    get_dataset,\n",
     "    get_X_y_data,\n",
@@ -44,16 +46,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# results dir for loading/saving\n",
-    "results_dir = pathlib.Path(\"results/\")\n",
+    "# set numpy seed to make random operations reproduceable\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "results_dir = pathlib.Path(\"../results/\")\n",
     "\n",
     "log_reg_model_path = pathlib.Path(f\"{results_dir}/1.log_reg_model.joblib\")\n",
     "log_reg_model = load(log_reg_model_path)\n",
     "\n",
     "# load features data from indexes and features dataframe\n",
-    "data_split_path = pathlib.Path(\"results/0.data_split_indexes.tsv\")\n",
+    "data_split_path = pathlib.Path(f\"{results_dir}/0.data_split_indexes.tsv\")\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
-    "features_dataframe_path = pathlib.Path(\"../1.format_data/data/training_data.csv.gz\")\n",
+    "features_dataframe_path = pathlib.Path(\"../../1.format_data/data/training_data.csv.gz\")\n",
     "features_dataframe = get_features_data(features_dataframe_path)"
    ]
   },
