--- a/2.ML_model/notebooks/3.interpret_model.ipynb
+++ b/2.ML_model/notebooks/3.interpret_model.ipynb
@@ -36,8 +36,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# set numpy seed to make random operations reproduceable\n",
+    "np.random.seed(0)\n",
+    "\n",
     "# results dir for loading/saving\n",
-    "results_dir = pathlib.Path(\"results/\")\n",
+    "results_dir = pathlib.Path(\"../results/\")\n",
     "\n",
     "log_reg_model_path = pathlib.Path(f\"{results_dir}/1.log_reg_model.joblib\")\n",
     "log_reg_model = load(log_reg_model_path)"
@@ -392,9 +395,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# results dir for loading/saving\n",
-    "results_dir = pathlib.Path(\"results/\")\n",
-    "\n",
     "shuffled_baseline_log_reg_model_path = pathlib.Path(f\"{results_dir}/1.shuffled_baseline_log_reg_model.joblib\")\n",
     "shuffled_baseline_log_reg_model = load(shuffled_baseline_log_reg_model_path)"
    ]
