--- a/2.ML_model/notebooks/0.split_data.ipynb
+++ b/2.ML_model/notebooks/0.split_data.ipynb
@@ -22,7 +22,10 @@
     "\n",
     "from sklearn.utils import shuffle\n",
     "\n",
-    "from utils.MlPipelineUtils import get_features_data, get_random_images_indexes, get_representative_images, get_image_indexes"
+    "import sys\n",
+    "# adding utils to system path\n",
+    "sys.path.insert(0, '../utils')\n",
+    "from MlPipelineUtils import get_features_data, get_random_images_indexes, get_representative_images, get_image_indexes"
    ]
   },
   {
@@ -46,8 +49,11 @@
     }
    ],
    "source": [
+    "# set numpy seed to make random operations reproduceable\n",
+    "np.random.seed(0)\n",
+    "\n",
     "# load x (features) and y (labels) dataframes\n",
-    "load_path = pathlib.Path(\"../1.format_data/data/training_data.csv.gz\")\n",
+    "load_path = pathlib.Path(\"../../1.format_data/data/training_data.csv.gz\")\n",
     "training_data = get_features_data(load_path)\n",
     "print(training_data.shape)\n",
     "\n",
@@ -66,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4022, 1292)\n"
+      "(3926, 1292)\n"
      ]
     }
    ],
@@ -87,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3417, 1292)\n"
+      "(3338, 1292)\n"
      ]
     }
    ],
@@ -138,27 +144,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>544</td>\n",
+       "      <td>107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>545</td>\n",
+       "      <td>108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>546</td>\n",
+       "      <td>109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>547</td>\n",
+       "      <td>110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>548</td>\n",
+       "      <td>111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -197,11 +203,11 @@
       ],
       "text/plain": [
        "        label  index\n",
-       "0     holdout    544\n",
-       "1     holdout    545\n",
-       "2     holdout    546\n",
-       "3     holdout    547\n",
-       "4     holdout    548\n",
+       "0     holdout    107\n",
+       "1     holdout    108\n",
+       "2     holdout    109\n",
+       "3     holdout    110\n",
+       "4     holdout    111\n",
        "...       ...    ...\n",
        "4118    train   4302\n",
        "4119    train   4303\n",
@@ -237,7 +243,7 @@
    "outputs": [],
    "source": [
     "# make results dir for saving\n",
-    "results_dir = pathlib.Path(\"results/\")\n",
+    "results_dir = pathlib.Path(\"../results/\")\n",
     "results_dir.mkdir(parents=True, exist_ok=True)\n",
     "# save indexes as tsv file\n",
     "index_data.to_csv(f\"{results_dir}/0.data_split_indexes.tsv\", sep=\"\\t\")"
