--- a/2.ML_model/notebooks/1.train_model.ipynb
+++ b/2.ML_model/notebooks/1.train_model.ipynb
@@ -25,7 +25,10 @@
     "from sklearn.utils import shuffle\n",
     "from joblib import dump\n",
     "\n",
-    "from utils.MlPipelineUtils import get_features_data, get_dataset, get_X_y_data"
+    "import sys\n",
+    "# adding utils to system path\n",
+    "sys.path.insert(0, '../utils')\n",
+    "from MlPipelineUtils import get_features_data, get_dataset, get_X_y_data"
    ]
   },
   {
@@ -158,6 +161,30 @@
        "      <td>-0.401801</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Interphase</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>1155.936170</td>\n",
+       "      <td>191.180851</td>\n",
+       "      <td>LT0043_48</td>\n",
+       "      <td>166_55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LT0043_48_166_55</td>\n",
+       "      <td>LT0043_48/166/55/LT0043_48_166_55.tif</td>\n",
+       "      <td>OGG1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.264048</td>\n",
+       "      <td>-0.678396</td>\n",
+       "      <td>0.076916</td>\n",
+       "      <td>3.142620</td>\n",
+       "      <td>0.202174</td>\n",
+       "      <td>0.331271</td>\n",
+       "      <td>0.567700</td>\n",
+       "      <td>0.072269</td>\n",
+       "      <td>-1.715632</td>\n",
+       "      <td>1.303155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Artefact</td>\n",
        "      <td>100.0</td>\n",
@@ -180,30 +207,6 @@
        "      <td>-0.273222</td>\n",
        "      <td>-0.722049</td>\n",
        "      <td>0.554533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Artefact</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>795.484536</td>\n",
-       "      <td>242.752577</td>\n",
-       "      <td>LT0043_48</td>\n",
-       "      <td>166_55</td>\n",
-       "      <td>1</td>\n",
-       "      <td>LT0043_48_166_55</td>\n",
-       "      <td>LT0043_48/166/55/LT0043_48_166_55.tif</td>\n",
-       "      <td>OGG1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.406520</td>\n",
-       "      <td>0.368818</td>\n",
-       "      <td>0.568022</td>\n",
-       "      <td>1.618059</td>\n",
-       "      <td>-0.320691</td>\n",
-       "      <td>0.527715</td>\n",
-       "      <td>0.130431</td>\n",
-       "      <td>-0.293846</td>\n",
-       "      <td>-0.755968</td>\n",
-       "      <td>0.025133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -351,7 +354,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3417 rows × 1292 columns</p>\n",
+       "<p>3338 rows × 1292 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -359,8 +362,8 @@
        "4                     Polylobed                 10.0        1212.640449   \n",
        "5            MetaphaseAlignment                 42.0          69.902174   \n",
        "6                    Interphase                 72.0         517.024390   \n",
+       "7                    Interphase                 85.0        1155.936170   \n",
        "8                      Artefact                100.0         748.324675   \n",
-       "9                      Artefact                108.0         795.484536   \n",
        "...                         ...                  ...                ...   \n",
        "4302             SmallIrregular                 70.0         645.173913   \n",
        "4303             SmallIrregular                 37.0         828.268657   \n",
@@ -372,8 +375,8 @@
        "4             21.314607      LT0043_48        166_55              1   \n",
        "5            104.782609      LT0043_48        166_55              1   \n",
        "6            159.317073      LT0043_48        166_55              1   \n",
+       "7            191.180851      LT0043_48        166_55              1   \n",
        "8            220.935065      LT0043_48        166_55              1   \n",
-       "9            242.752577      LT0043_48        166_55              1   \n",
        "...                 ...            ...           ...            ...   \n",
        "4302         664.536232      LT0106_02         287_6              1   \n",
        "4303         338.328358      LT0106_02        287_33              1   \n",
@@ -385,8 +388,8 @@
        "4           LT0043_48_166_55  LT0043_48/166/55/LT0043_48_166_55.tif   \n",
        "5           LT0043_48_166_55  LT0043_48/166/55/LT0043_48_166_55.tif   \n",
        "6           LT0043_48_166_55  LT0043_48/166/55/LT0043_48_166_55.tif   \n",
+       "7           LT0043_48_166_55  LT0043_48/166/55/LT0043_48_166_55.tif   \n",
        "8           LT0043_48_166_55  LT0043_48/166/55/LT0043_48_166_55.tif   \n",
-       "9           LT0043_48_166_55  LT0043_48/166/55/LT0043_48_166_55.tif   \n",
        "...                      ...                                    ...   \n",
        "4302         LT0106_02_287_6    LT0106_02/287/6/LT0106_02_287_6.tif   \n",
        "4303        LT0106_02_287_33  LT0106_02/287/33/LT0106_02_287_33.tif   \n",
@@ -398,8 +401,8 @@
        "4                OGG1  ...           1.764085         -0.364659   \n",
        "5                OGG1  ...          -0.030402         -0.306105   \n",
        "6                OGG1  ...          -2.070584         -0.419038   \n",
+       "7                OGG1  ...          -1.264048         -0.678396   \n",
        "8                OGG1  ...          -0.834010         -0.404291   \n",
-       "9                OGG1  ...          -1.406520          0.368818   \n",
        "...               ...  ...                ...               ...   \n",
        "4302  ENSG00000186143  ...           0.481624         -0.066337   \n",
        "4303  ENSG00000186143  ...          -0.010054          2.490791   \n",
@@ -411,8 +414,8 @@
        "4             -0.623983           0.087524          -0.678471   \n",
        "5              0.471312           1.111647          -0.395580   \n",
        "6             -0.716160           2.525790          -0.300407   \n",
+       "7              0.076916           3.142620           0.202174   \n",
        "8              0.839559           0.230029          -0.322646   \n",
-       "9              0.568022           1.618059          -0.320691   \n",
        "...                 ...                ...                ...   \n",
        "4302          -0.298825          -1.073172          -0.263557   \n",
        "4303           0.112932          -0.448705          -0.573112   \n",
@@ -424,8 +427,8 @@
        "4             -1.047430           0.119700           0.254014   \n",
        "5              0.265579           0.337486          -0.728758   \n",
        "6              0.243762           0.270543           0.473745   \n",
+       "7              0.331271           0.567700           0.072269   \n",
        "8             -0.254167          -0.602655          -0.273222   \n",
-       "9              0.527715           0.130431          -0.293846   \n",
        "...                 ...                ...                ...   \n",
        "4302          -0.922345           0.761749           0.721974   \n",
        "4303          -1.219449           0.756078          -0.434373   \n",
@@ -437,8 +440,8 @@
        "4              0.080685          -0.808582  \n",
        "5              0.519263           1.143726  \n",
        "6             -1.024547          -0.401801  \n",
+       "7             -1.715632           1.303155  \n",
        "8             -0.722049           0.554533  \n",
-       "9             -0.755968           0.025133  \n",
        "...                 ...                ...  \n",
        "4302           1.400016          -0.244034  \n",
        "4303          -0.617329           2.989479  \n",
@@ -446,7 +449,7 @@
        "4306           1.849867          -0.896322  \n",
        "4307           1.555225          -0.743614  \n",
        "\n",
-       "[3417 rows x 1292 columns]"
+       "[3338 rows x 1292 columns]"
       ]
      },
      "execution_count": 2,
@@ -455,9 +458,14 @@
     }
    ],
    "source": [
+    "# set numpy seed to make random operations reproduceable\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "results_dir = pathlib.Path(\"../results/\")\n",
+    "\n",
     "# load training data from indexes and features dataframe\n",
-    "data_split_path = pathlib.Path(\"results/0.data_split_indexes.tsv\")\n",
-    "features_dataframe_path = pathlib.Path(\"../1.format_data/data/training_data.csv.gz\")\n",
+    "data_split_path = pathlib.Path(f\"{results_dir}/0.data_split_indexes.tsv\")\n",
+    "features_dataframe_path = pathlib.Path(\"../../1.format_data/data/training_data.csv.gz\")\n",
     "\n",
     "features_dataframe = get_features_data(features_dataframe_path)\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
@@ -475,8 +483,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3417, 1280)\n",
-      "(3417,)\n"
+      "(3350, 1280)\n",
+      "(3350,)\n"
      ]
     }
    ],
@@ -2009,10 +2017,6 @@
     }
    ],
    "source": [
-    "# make results dir for saving\n",
-    "results_dir = pathlib.Path(\"results/\")\n",
-    "results_dir.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
     "# save final estimator\n",
     "dump(grid_search_cv.best_estimator_, f\"{results_dir}/1.log_reg_model.joblib\")"
    ]
@@ -3312,10 +3316,6 @@
     }
    ],
    "source": [
-    "# make results dir for saving\n",
-    "results_dir = pathlib.Path(\"results/\")\n",
-    "results_dir.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
     "# save final estimator\n",
     "dump(grid_search_cv.best_estimator_, f\"{results_dir}/1.shuffled_baseline_log_reg_model.joblib\")"
    ]
