--- a/2.analyze_data/2.analyze_training_data.ipynb
+++ b/2.analyze_data/2.analyze_training_data.ipynb
@@ -34,12 +34,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load dataframe"
+    "### Initalize analysis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make random numpy operations consistent\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "# create results dir for saving results\n",
+    "results_dir = pathlib.Path(\"results/\")\n",
+    "results_dir.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -438,15 +459,12 @@
        "[4123 rows x 1281 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# make random numpy operations consistent\n",
-    "np.random.seed(0)\n",
-    "\n",
     "# load features dataframe\n",
     "features_dataframe_path = pathlib.Path(\"../1.format_data/data/training_data.csv.gz\")\n",
     "features_dataframe = get_features_data(features_dataframe_path)\n",
@@ -467,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +509,7 @@
        "Name: Mitocheck_Phenotypic_Class, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -518,13 +536,13 @@
        "(4123, 1281)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cols_to_keep = [\n",
+    "classes_to_keep = [\n",
     "    \"Polylobed\",\n",
     "    \"MetaphaseAlignment\",\n",
     "    \"Interphase\",\n",
@@ -542,7 +560,7 @@
     "    \"Grape\",\n",
     "]\n",
     "\n",
-    "features_dataframe = features_dataframe.loc[features_dataframe[\"Mitocheck_Phenotypic_Class\"].isin(cols_to_keep)]\n",
+    "features_dataframe = features_dataframe.loc[features_dataframe[\"Mitocheck_Phenotypic_Class\"].isin(classes_to_keep)]\n",
     "features_dataframe.shape"
    ]
   },
@@ -555,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +590,8 @@
     }
    ],
    "source": [
-    "show_1D_umap(features_dataframe)"
+    "save_path = pathlib.Path(f\"{results_dir}/1D_umap.tsv\")\n",
+    "show_1D_umap(features_dataframe, save_path)"
    ]
   },
   {
@@ -584,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +620,8 @@
     }
    ],
    "source": [
-    "show_2D_umap(features_dataframe)"
+    "save_path = pathlib.Path(f\"{results_dir}/2D_umap.tsv\")\n",
+    "show_2D_umap(features_dataframe, save_path)"
    ]
   },
   {
@@ -613,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +650,8 @@
     }
    ],
    "source": [
-    "show_3D_umap(features_dataframe)"
+    "save_path = pathlib.Path(f\"{results_dir}/3D_umap.tsv\")\n",
+    "show_3D_umap(features_dataframe, save_path)"
    ]
   }
  ],
