rename, save images

--- a/2.analyze_data/analyze_training_data.ipynb
+++ b/2.analyze_data/analyze_training_data.ipynb
@@ -595,9 +595,8 @@
     }
    ],
    "source": [
-    "save_path = pathlib.Path(f\"{results_dir}/1D_umap.tsv\")\n",
     "phenotypic_classes = metadata_dataframe[\"Mitocheck_Phenotypic_Class\"]\n",
-    "show_1D_umap(features_dataframe, phenotypic_classes, save_path)"
+    "show_1D_umap(features_dataframe, phenotypic_classes, results_dir)"
    ]
   },
   {
@@ -626,9 +625,8 @@
     }
    ],
    "source": [
-    "save_path = pathlib.Path(f\"{results_dir}/2D_umap.tsv\")\n",
     "phenotypic_classes = metadata_dataframe[\"Mitocheck_Phenotypic_Class\"]\n",
-    "show_2D_umap(features_dataframe, phenotypic_classes, save_path)"
+    "show_2D_umap(features_dataframe, phenotypic_classes, results_dir)"
    ]
   },
   {
@@ -657,15 +655,14 @@
     }
    ],
    "source": [
-    "save_path = pathlib.Path(f\"{results_dir}/3D_umap.tsv\")\n",
     "phenotypic_classes = metadata_dataframe[\"Mitocheck_Phenotypic_Class\"]\n",
-    "show_3D_umap(features_dataframe, phenotypic_classes, save_path)"
+    "show_3D_umap(features_dataframe, phenotypic_classes, results_dir)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('5.analyze_features_mitocheck')",
+   "display_name": "Python 3.8.13 ('2.analyze_training_data')",
    "language": "python",
    "name": "python3"
   },
@@ -684,7 +681,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "faa363ef4af2ef999f2f98654ccb89234a09cf085f52f239c96df4c4eb665d61"
+    "hash": "ad1083e3dd16f562452e4d714b55bbc8d938c52aa784c0b2ae1ae118cac264ea"
    }
   }
  },
