--- a/0.download_data/download_data.ipynb
+++ b/0.download_data/download_data.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load training data from github"
+    "### Load/combine training data from github"
    ]
   },
   {
@@ -120,6 +120,13 @@
     "#training_data_2015 = training_data_2015.drop(columns=[\"Object_Outline\"])\n",
     "\n",
     "training_data = combine_datasets(training_data_2006, training_data_2015)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preview dataset"
    ]
   },
   {
@@ -317,7 +324,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7537</th>\n",
+       "      <th>7506</th>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>383.075269</td>\n",
        "      <td>220.198925</td>\n",
@@ -341,7 +348,7 @@
        "      <td>1.981009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7538</th>\n",
+       "      <th>7507</th>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>975.747253</td>\n",
        "      <td>293.868132</td>\n",
@@ -365,7 +372,7 @@
        "      <td>3.084642</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7539</th>\n",
+       "      <th>7508</th>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>898.614815</td>\n",
        "      <td>302.407407</td>\n",
@@ -389,7 +396,7 @@
        "      <td>1.612470</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7540</th>\n",
+       "      <th>7509</th>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>946.758621</td>\n",
        "      <td>281.689655</td>\n",
@@ -413,7 +420,7 @@
        "      <td>2.306039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7541</th>\n",
+       "      <th>7510</th>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>998.977099</td>\n",
        "      <td>421.229008</td>\n",
@@ -438,7 +445,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7542 rows × 1292 columns</p>\n",
+       "<p>7511 rows × 1292 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -449,11 +456,11 @@
        "3                      Artefact        1106.348485         370.469697   \n",
        "4            MetaphaseAlignment         937.692308         521.048077   \n",
        "...                         ...                ...                ...   \n",
-       "7537                 OutOfFocus         383.075269         220.198925   \n",
-       "7538                 OutOfFocus         975.747253         293.868132   \n",
-       "7539                 OutOfFocus         898.614815         302.407407   \n",
-       "7540                 OutOfFocus         946.758621         281.689655   \n",
-       "7541                 OutOfFocus         998.977099         421.229008   \n",
+       "7506                 OutOfFocus         383.075269         220.198925   \n",
+       "7507                 OutOfFocus         975.747253         293.868132   \n",
+       "7508                 OutOfFocus         898.614815         302.407407   \n",
+       "7509                 OutOfFocus         946.758621         281.689655   \n",
+       "7510                 OutOfFocus         998.977099         421.229008   \n",
        "\n",
        "     Metadata_Plate  Metadata_Well  Metadata_Frame  Metadata_Site  \\\n",
        "0         LT0066_19            287               1              1   \n",
@@ -462,11 +469,11 @@
        "3         LT0066_19            287               1              1   \n",
        "4         LT0066_19            287               1              1   \n",
        "...             ...            ...             ...            ...   \n",
-       "7537      LT0601_01            217              49              1   \n",
-       "7538      LT0603_03              2              49              1   \n",
-       "7539      LT0603_03              2              49              1   \n",
-       "7540      LT0603_03              2              49              1   \n",
-       "7541      LT0603_03              2              49              1   \n",
+       "7506      LT0601_01            217              49              1   \n",
+       "7507      LT0603_03              2              49              1   \n",
+       "7508      LT0603_03              2              49              1   \n",
+       "7509      LT0603_03              2              49              1   \n",
+       "7510      LT0603_03              2              49              1   \n",
        "\n",
        "     Metadata_Plate_Map_Name                    Metadata_DNA Metadata_Gene  \\\n",
        "0              LT0066_19_287   LT0066_19/LT0066_19_287_1.tif        ch-TOG   \n",
@@ -475,11 +482,11 @@
        "3              LT0066_19_287   LT0066_19/LT0066_19_287_1.tif        ch-TOG   \n",
        "4              LT0066_19_287   LT0066_19/LT0066_19_287_1.tif        ch-TOG   \n",
        "...                      ...                             ...           ...   \n",
-       "7537           LT0601_01_217  LT0601_01/LT0601_01_217_49.tif         ABCB8   \n",
-       "7538             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
-       "7539             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
-       "7540             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
-       "7541             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
+       "7506           LT0601_01_217  LT0601_01/LT0601_01_217_49.tif         ABCB8   \n",
+       "7507             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
+       "7508             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
+       "7509             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
+       "7510             LT0603_03_2    LT0603_03/LT0603_03_2_49.tif     failed QC   \n",
        "\n",
        "      ...  efficientnet_1270 efficientnet_1271  efficientnet_1272  \\\n",
        "0     ...           1.048350         -0.721622           0.749788   \n",
@@ -488,11 +495,11 @@
        "3     ...           0.943948         -0.211267          -0.346355   \n",
        "4     ...           0.947300         -0.564136           0.333336   \n",
        "...   ...                ...               ...                ...   \n",
-       "7537  ...           0.525202          8.110262           1.777901   \n",
-       "7538  ...           0.277908          5.959773           2.362540   \n",
-       "7539  ...           0.553313         10.086836           1.170072   \n",
-       "7540  ...          -0.152000         11.078217           2.460915   \n",
-       "7541  ...           0.957360          7.852915           2.886973   \n",
+       "7506  ...           0.525202          8.110262           1.777901   \n",
+       "7507  ...           0.277908          5.959773           2.362540   \n",
+       "7508  ...           0.553313         10.086836           1.170072   \n",
+       "7509  ...          -0.152000         11.078217           2.460915   \n",
+       "7510  ...           0.957360          7.852915           2.886973   \n",
        "\n",
        "      efficientnet_1273  efficientnet_1274  efficientnet_1275  \\\n",
        "0             -1.377590           0.454974           0.188488   \n",
@@ -501,11 +508,11 @@
        "3             -1.365543          -0.276932           0.023856   \n",
        "4             -1.584454           0.891666           1.223252   \n",
        "...                 ...                ...                ...   \n",
-       "7537          -1.512628          -0.225867          -1.612982   \n",
-       "7538          -1.000032          -0.723652          -1.460720   \n",
-       "7539          -1.317000          -0.994644          -1.406541   \n",
-       "7540          -0.989282          -1.141723          -1.424882   \n",
-       "7541          -1.147031          -0.557976          -1.454247   \n",
+       "7506          -1.512628          -0.225867          -1.612982   \n",
+       "7507          -1.000032          -0.723652          -1.460720   \n",
+       "7508          -1.317000          -0.994644          -1.406541   \n",
+       "7509          -0.989282          -1.141723          -1.424882   \n",
+       "7510          -1.147031          -0.557976          -1.454247   \n",
        "\n",
        "      efficientnet_1276  efficientnet_1277  efficientnet_1278  \\\n",
        "0              0.141427          -1.553405           2.346107   \n",
@@ -514,11 +521,11 @@
        "3              0.376514          -1.700348           1.833686   \n",
        "4             -0.359166          -0.826366           2.115734   \n",
        "...                 ...                ...                ...   \n",
-       "7537          -0.679415          -2.581475           0.501395   \n",
-       "7538          -1.919148          -0.301130           0.779582   \n",
-       "7539          -0.104613          -0.056216           0.714624   \n",
-       "7540          -2.959780          -1.999795           0.702134   \n",
-       "7541           0.038499          -0.374986           0.888749   \n",
+       "7506          -0.679415          -2.581475           0.501395   \n",
+       "7507          -1.919148          -0.301130           0.779582   \n",
+       "7508          -0.104613          -0.056216           0.714624   \n",
+       "7509          -2.959780          -1.999795           0.702134   \n",
+       "7510           0.038499          -0.374986           0.888749   \n",
        "\n",
        "      efficientnet_1279  \n",
        "0             -1.774278  \n",
@@ -527,13 +534,13 @@
        "3             -0.625385  \n",
        "4             -1.241848  \n",
        "...                 ...  \n",
-       "7537           1.981009  \n",
-       "7538           3.084642  \n",
-       "7539           1.612470  \n",
-       "7540           2.306039  \n",
-       "7541           1.141029  \n",
+       "7506           1.981009  \n",
+       "7507           3.084642  \n",
+       "7508           1.612470  \n",
+       "7509           2.306039  \n",
+       "7510           1.141029  \n",
        "\n",
-       "[7542 rows x 1292 columns]"
+       "[7511 rows x 1292 columns]"
       ]
      },
      "execution_count": 4,
@@ -542,30 +549,10 @@
     }
    ],
    "source": [
-    "training_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7511, 1292)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# remove undefined condensed class\n",
+    "# remove undefinedCondensed class with very low representation\n",
     "training_data = training_data[training_data[\"Mitocheck_Phenotypic_Class\"] != \"UndefinedCondensed\"]\n",
     "training_data = training_data.reset_index(drop=True)\n",
-    "training_data.shape"
+    "training_data"
    ]
   },
   {
@@ -577,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
